--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,56 @@
-# Logs
+# ######################################################################
+# TOPSTACK AD-ANALYTICS - GIT IGNORE
+# ######################################################################
+
+# DEPENDENCIES
+node_modules/
+.pnp
+.pnp.js
+
+# BUILD OUTPUTS
+dist/
+dist-ssr/
+build/
+*.tsbuildinfo
+
+# ENVIRONMENT VARIABLES (Extremely Sensitive)
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+*.local
+
+# DATA FILES
+# Nota: Usuário permitiu o envio das planilhas para o repositório.
+# As pastas /planilhas serão incluídas normalmente.
+
+# LOGS
 logs
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
+# EDITOR & IDE
 .vscode/*
 !.vscode/extensions.json
-.idea
-.DS_Store
+.idea/
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+.fleet/
+.helix/
+
+# SYSTEM FILES
+.DS_Store
+Thumbs.db
+desktop.ini
+
+# LOCAL CONFIGS
+metadata.json
+.agent/
+.gemini/
